--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Play Game</title>
+  <title>Curse of the Forsaken Isle</title>
   <style>
     :root {
       --footer-height: 80px; 
