--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Curse of the Forsaken Isle</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
   <style>
     :root {
       --footer-height: 80px; 
@@ -87,7 +88,7 @@ a:hover {
     ></iframe>
 
     <footer>
-      <div class="footer-line">Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
+      <div class="footer-line">Version 2.17.46 | Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
       <div class="footer-line">
         <a class="download-btn" href="game.zip" download="game.zip">Download game.zip</a>
       </div>
