--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a:hover {
     ></iframe>
 
     <footer>
-      <div class="footer-line">Version 2.17.46 | Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
+      <div class="footer-line">Version 2.17.46  |  <a href="https://forms.gle/juuJmwzEAf9mGriW6">Rate the Game</a> | Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
       <div class="footer-line">
         <a class="download-btn" href="game.zip" download="game.zip">Download game.zip</a>
       </div>
