--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ a:hover {
     ></iframe>
 
     <footer>
-      <div class="footer-line">Version 2.17.46  |  <a href="https://forms.gle/juuJmwzEAf9mGriW6">Rate the Game</a> | Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
+      <div class="footer-line">Version 2.17.48  |  <a href="https://forms.gle/juuJmwzEAf9mGriW6">Rate the Game</a> | Computer only | <a href="https://scratch.mit.edu/projects/963768137/">Created on Scratch</a></div>
       <div class="footer-line">
-        <a class="download-btn" href="game.zip" download="game.zip">Download game.zip</a>
+        <a class="download-btn" href="Game.zip" download="Game.zip">Download Game.zip</a>
       </div>
     </footer>
   </div>
